# RLWE-CSCM

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  basic_demo.cpp  download  polynomial.cpp  polynomial.hpp  theory.md
docs/: security.md  theory.md
examples/: basic_demo.cpp
include/rlwe_cscm/: polynomial.hpp  rlwe_cscm.hpp
scr/: polynomial.cpp  rlwe_cscm.cpp
test/: test_correctness.cpp
